static/css/helper.css
.hero-absolute-height {
  height: 48vh;
}

.w16px {
  width: 16px;
}

.w24px {
  width: 24px;
}

.h2 {
  font-size: 1.5em;
}

.dim {
  opacity: .4;
}

@media (min-width: 680px) {
  .undraw {
    width: 90%;
    margin-left: initial;
    min-width: 66%;
  }
  .platform-feature {
    align-self: flex-start;
    width: 48%;
  }
}

.undraw--mini {
  max-width: 200px;
  min-width: 200px;
  width: 200px;
}

.w25 {
  width: 25%;
  max-width: 25%;
  min-width: 25%;
}


.w40 {
  width: 40%;
  max-width: 40%;
  min-width: 40%;
}

.hide {
  display: none !important;
}

.db {
  display: block;
}

.flex {
  display: flex;
  align-items: center;
}

.d-flex {
  display: flex;
  justify-content: space-between;
}


.flex-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-around {
  justify-content: space-around;
}

@media (min-width: 680px) {
  .nowrap {
    flex-wrap: nowrap;
  }
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.full-width {
  width: 100%;
  max-width: none;
}

.text-center {
  text-align: center;
}

@media (min-width: 768px) {
  .text-center-md {
    text-align: center;
  }
}
.text-right {
  text-align: right;
}

.text-left {
  text-align: left;
}

.v-mid {
  vertical-align: middle;
}

/* Margins */

.ma0 {
  margin: 0;
}

.mt0 {
  margin-top: 0 !important;
}

.mt1 {
  margin-top: 1em;
}

.mt3 {
  margin-top: 3em;
}

.mt7 {
  margin-top: 7em;
}

.mb {
  margin-bottom: 1.5em;
}

.mb0 {
  margin-bottom: 0 !important;
}

.mb3 {
  margin-bottom: 3em;
}

.mb7 {
  margin-bottom: 7em;
}

.mb0 {
  margin-bottom: 0;
}

.mr05 {
  margin-right: .5em;
}

.mr1 {
  margin-right: 1em;
}

.mr3 {
  margin-right: 3em !important;
}

.ml1 {
  margin-left: 1em;
}

.mh1 {
  margin-left: 1rem;
  margin-right: 1rem;
}

.mv05 {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.mv1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.mv4 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.mv7 {
  margin-top: 7em;
  margin-bottom: 7em;
}

/* Paddings */

.pa1 {
  padding: 1rem;
}

.pb7 {
  padding-bottom: 7rem;
}

.ph1 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.pv3 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.pb3 {
  padding-bottom: 3rem;
}

.py7 {
  padding-bottom: 7rem;
  padding-top: 7rem;
}

.pipe {
  margin-left: .25em;
  margin-right: .25em;
}

